<resources>
    <string name="app_name">CBIS Trial</string>
    <string name="login">Login</string>
    <string name="nim">NIM</string>
    <string name="password">Password</string>
    <string name="insert_data_mahasiswa">Insert Data Mahasiswa</string>
    <string name="nama">Nama</string>
    <string name="create_data">Create Data</string>
    <string name="create_mahasiswa">Insert Mahasiswa</string>
    <string name="logout">Logout</string>
    <string name="menu_admin">Menu Admin</string>
    <string name="list_mahasiswa">List Mahasiswa</string>
    <string name="create_admin">Insert Admin</string>
    <string name="list_admin">List Admin</string>
    <string name="create_dosen">Insert Dosen</string>
    <string name="list_dosen">List Dosen</string>
    <string name="logo_upn">Logo Upn</string>
    <string name="create_mata_kuliah">Insert Mata Kuliah</string>
    <string name="list_mata_kuliah">List Mata Kuliah</string>
    <string name="create_jadwal_kuliah">Insert Jadwal Kuliah</string>
    <string name="list_jadwal_kuliah">List Jadwal Kuliah</string>
    <string name="insert_data_dosen">Insert Data Dosen</string>
    <string name="code_dosen">Kode Dosen</string>
    <string name="insert_data_admin">Insert Data Admin</string>
    <string name="code_admin">Kode Admin</string>
    <string name="menu_dosen">Menu Dosen</string>
    <string name="create_nilai">Insert Nilai</string>
    <string name="list_nilai">List Nilai</string>
    <string name="menu_mahasiswa">Menu Mahasiswa</string>
    <string name="create_jadwal">Create Jadwal</string>
    <string name="list_jadwal">List Jadwal</string>
    <string name="insert_berita">Insert Berita</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="isi_berita">Isi Berita</string>
    <string name="tanggal_berita">Tanggal Berita</string>
    <string name="create_berita_kampus">Create Berita Kampus</string>
    <string name="list_berita_kampus">List Berita Kampus</string>
    <string name="insert_data_mata_kuliah">Insert Data Mata Kuliah</string>
    <string name="code_mata_kuliah">Kode Mata Kuliah</string>
    <string name="insert_data_jadwal">Insert Data Jadwal</string>
    <string name="code_jadwal">Kode Jadwal</string>
    <string name="hari">Hari</string>
    <string name="sesi">Sesi ke</string>
    <string name="nama_matkul">Nama Matkul</string>
    <string name="insert_data_jadwal_kuliah">Insert Jadwal Kuliah</string>
    <string name="insert_data_jadwal_ujian">Insert Jadwal Ujian</string>
    <string name="tanggal_ujian">Tanggal Ujian</string>
    <string name="list_jadwal_ujian">Jadwal Ujian</string>
    <string name="create_jadwal_ujian">Create Jadwal Ujian</string>
</resources>
