<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAdmin"
    android:padding="20dp"
    android:background="@color/BackgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upn"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo_upn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu_admin"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/create_mahasiswa_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_mahasiswa"/>
        <Button
            android:id="@+id/list_mahasiswa_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_mahasiswa"/>
        <Button
            android:id="@+id/create_dosen_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_dosen"/>
        <Button
            android:id="@+id/list_dosen_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_dosen"/>
        <Button
            android:id="@+id/create_jadwal_kuliah_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_jadwal"/>
        <Button
            android:id="@+id/list_jadwal_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_jadwal"/>
        <Button
            android:id="@+id/create_admin_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_admin"/>
        <Button
            android:id="@+id/list_admin_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_admin"
            />
        <Button
            android:id="@+id/create_jadwal_ujian_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_jadwal_ujian"/>
        <Button
            android:id="@+id/create_berita_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_berita_kampus"/>
        <Button
            android:id="@+id/list_berita_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_berita_kampus"
            />

    </LinearLayout>

</ScrollView>