<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeDosen"
    android:padding="20dp"
    android:background="@color/BackgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upn"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo_upn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu_dosen"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/create_mata_kuliah_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_mata_kuliah"/>
        <Button
            android:id="@+id/list_mata_kuliah_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_mata_kuliah"/>
        <Button
            android:id="@+id/create_nilai_btn"
            style="@style/ButtonAdmin"
            android:text="@string/create_nilai"/>
        <Button
            android:id="@+id/list_nilai_dosen_btn"
            style="@style/ButtonAdmin"
            android:text="@string/list_nilai"/>

    </LinearLayout>

</LinearLayout>