<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.CreateJadwal"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/BackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_data_jadwal"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_jadwal"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />
        <EditText
            android:id="@+id/create_code_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLength="9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_mata_kuliah"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_code_matkul_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_dosen"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_code_dosen_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hari"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_hari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sesi"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_sesi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_create_jadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_data"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/BackgroundColor"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>