<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/btn_list_berita"
        style="@style/ButtonAdmin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/list_title_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_berita"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/list_body_berita"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/isi_berita"
            android:textSize="15sp"
            android:maxLines="2"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/list_date_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_berita"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>