<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/item_jadwal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/ButtonAdmin">
        <TextView
            android:id="@+id/tv_hari"
            android:text="@string/hari"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_nama_matkul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_matkul"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_sesi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sesi"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>