<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.CreateMahasiswa"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/BackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_data_mahasiswa"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />
        <EditText
            android:id="@+id/create_nim_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="9"
            android:autofillHints="Masukkan Nim"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_nama_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_password_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/create_status_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_create_mahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_data"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/BackgroundColor"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>