<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.CreateJadwalKuliah"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/BackgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_data_jadwal_kuliah"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_jadwal"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />
        <EditText
            android:id="@+id/create_code_jadwal_kuliah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/create_nim_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="9"/>
        <Button
            android:id="@+id/btn_create_jadwal_kuliah"
            android:text="@string/create_jadwal_kuliah"
            style="@style/ButtonAdmin"
            android:textSize="20sp"/>


<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/rv"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                tools:listitem="@layout/item_jadwal"/>-->
<!--        </ScrollView>-->

    </LinearLayout>
</LinearLayout>